dat.gui module added

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "@types/three": "^0.163.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.163.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
