--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d ./dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@types/dat.gui": "^0.7.13",
@@ -15,7 +14,6 @@
     "dat.gui": "^0.7.9",
     "three": "^0.163.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-top-level-await": "^1.4.1"
+    "vite": "^5.2.0"
   }
 }
