--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d ./dist"
   },
   "devDependencies": {
     "@types/three": "^0.163.0",
+    "gh-pages": "^6.1.1",
     "three": "^0.163.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
