--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d ./dist"
   },
   "devDependencies": {
+    "@tweenjs/tween.js": "^23.1.2",
     "@types/three": "^0.163.0",
     "gh-pages": "^6.1.1",
     "three": "^0.163.0",
